examples/test/testpolicy5627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5627
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key41: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value32
          key32: value23
          key6: value7
      podSelector:
        matchLabels:
          key37: value13
